# ws

./: .gitignore  .gitmodules  0dg.csv  12cm.csv  13cm.csv  14cm.csv  15cm.csv  16cm.csv  30dg.csv  40dg.csv  40dg_new.csv  README.md  planned_trajectory.csv  trajectory.csv  wave_right.csv
dora-openarm-ros2/config/: dataflow_bridge_ros2_vr.yaml
dora-openarm-ros2/src/dora_ros2_bridge/: main.py  openarm_vr_quest_receiver.py
openarm_motion_planning/: package.xml  setup.cfg  setup.py
openarm_motion_planning/scripts/: demo.py  demo3.py  pub.py  pub2.py  reach_left.py  reach_right.py
openarm_mujoco/v1/: openarm_bimanual.xml
openarm_mujoco/v1/openarm_bimanual/: openarm_bimanual.usda
openarm_ros2/openarm_bringup/launch/: openarm.bimanual.launch.py  openarm_vr.bimanual.launch.py
openarmx_teleop_vr/openarmx_teleop_vr/: setup.py
openarmx_teleop_vr/openarmx_teleop_vr/launch/: teleop_vr.launch.py
openarmx_teleop_vr/openarmx_teleop_vr/openarmx_teleop_vr/: openarmx_teleop_vr_node.py
src/openarm_description/rviz/: bimanual.rviz
src/openarm_motion_planning/config/: config.yaml  cylinder.csv  cylinder2.csv  rectangle.csv
src/openarm_motion_planning/openarm_motion_planning/: openarm_motion_planning_client.py
src/openarm_motion_planning/scripts/: create_apriltag_shaft.py  demo.py  demo2.py  demo3.py  demo4.py  demo5.py  demo50.py  (+8 more)
src/openarmx_teleop_vr/openarmx_teleop_vr/: package.xml
src/openarmx_teleop_vr/openarmx_teleop_vr/config/: teleop_params.yaml
src/pnk_perception_msgs/: CMakeLists.txt  package.xml
src/pnk_perception_msgs/msg/: GraspTarget.msg
(+37 files in other folders)
