<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openarmx_teleop_vr</name>
  <version>0.1.0</version>
  <description>VR teleoperation for OpenArmX using Pinocchio IK solver</description>
  <maintainer email="your_email@example.com">OpenArmX Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>openarmx_description</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
